[tool.poetry]
name = "abs-orm"
version = "0.1.0"
description = "SQLAlchemy models, Pydantic schemas, and database layer for abs_notary"
authors = ["ingmarAvocado <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ingmarAvocado/abs_orm"
repository = "https://github.com/ingmarAvocado/abs_orm"
packages = [{include = "abs_orm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
aiosqlite = "^0.19.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
